Insercao de um paragrafo

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Parabolicamará</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+  <head>
+    <title>Parabolicamará</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <hr />
 
-</head>
-<body>
-
-
-<hr>
-
-<h1>Testando....</h1>
-<h2>Vai do github para o hostinger /home</h2>
-
-</body>
+    <h1>Testando....</h1>
+    <h2>Vai do github para o hostinger /home</h2>
+    <h3>Um parágrafo a mais</h3>
+  </body>
 </html>
-
-
