--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <h1>Testando....</h1>
     <h2>Vai do github para o hostinger /home</h2>
-    <h3>Um parágrafo a mais</h3>
+    <h3>Um parágrafo a mais....</h3>
   </body>
 </html>
