Site mod para abrigar dados do pai

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   </head>
   <body>
-    <hr />
-
-    <h1>Testando....</h1>
-    <h1>Vai do github para o hostinger /home</h1>
+    <h1>Dados de Décio Pazzianotto</h1>
+    <h2>Pinturas</h2>
     <h1>Um parágrafo a mais....</h1>
   </body>
 </html>
