Inserindo o primeiro quadro

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Dados de Décio Pazzianotto</h1>
     <h2>Pinturas</h2>
-    <h1>Um parágrafo a mais....</h1>
+    <img src="./quadros/quadro_1.jpg" />
   </body>
 </html>
