--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Dados de Décio Pazzianotto</h1>
     <h2>Pinturas</h2>
     <img src="./quadros/quadro_1.jpg" />
+    <img src="./quadros/quadro_2.jpg" />
+    <img src="./quadros/quadro_3.jpg" />
+    <img src="./quadros/quadro_4.jpg" />
   </body>
 </html>
