--- a/index.html
+++ b/index.html
@@ -1,17 +1,534 @@
-<!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <title>Parabolicamará</title>
-    <meta charset="UTF-8" />
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+      .text-justify {
+        text-align: justify;
+      }
+    </style>
   </head>
   <body>
-    <h1>Dados de Décio Pazzianotto</h1>
-    <h2>Pinturas</h2>
-    <img src="./quadros/quadro_1.jpg" />
-    <img src="./quadros/quadro_2.jpg" />
-    <img src="./quadros/quadro_3.jpg" />
-    <img src="./quadros/quadro_4.jpg" />
+    <div class="p-5 bg-success text-white text-center">
+      <h1>Décio Pazzianotto</h1>
+      <p>Algumas informações</p>
+    </div>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h2 class="mt-5 text-center">A família Pazzianotto</h2>
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-5">
+          <div class="fakeimg">
+            <img
+              src="./quadros/pazzianottos.jpg"
+              class="img-thumbnail"
+              alt="Cinque Terre"
+              width="608"
+              height="472"
+            />
+          </div>
+        </div>
+        <div class="col-sm-7">
+          <p class="text-justify">
+            Foto da família de Benjamin Pazzianotto e Vittoria Giuseppina Cattel
+            e seus 12 filhos. Benjamim Pazzianotto, cujo nome original era
+            Beneamino Antonio Pasianoto, nasceu em Gorgo al Monticano, Treviso
+            em 11.2.1887. Filho de Angelo Pasianoto e Maria Tonon, casal que
+            emigrou para o Brasil em 1888. Vittoria nasceu em 24-12-1889 em
+            Mansuè, Treviso, Itália. Chegou ao Brasil em 31.12.1898, com seus
+            pais, Pietro Antonio Gattel e Teresa Armelin. Na foto aparecem da
+            esquerda para a direita em pé: Décio, Alberto (Vechetta) , Antonio
+            (Nunciato), Angelo, Maria e Teresa (gêmeas), Elydia, Ignez, e
+            Floriza . Mais a frente e sentatos estão Edmur (filho mais novo),
+            Benjamim, Padre Romário, Vittoria e Leonor.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="mt-5 text-center">Décio Pazzianotto</h2>
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="float-end">
+            <img
+              src="./quadros/foto_decio2.png"
+              class="img-thumbnail"
+              alt="Cinque Terre"
+              width="152"
+              height="118"
+            />
+          </div>
+        </div>
+
+        <div class="col-sm-7">
+          <p class="text-justify">
+            Nasceu em Capivari em 7 de novembro de 1929, casou-se com Maria
+            Helena Bresciani Pazzianotto. Teve 3 filhos: Carlos, Cristina e
+            Cibele. Trabalhou como alfaiate.
+          </p>
+          <p class="text-justify">
+            Estudou pintura na Escola de Belas Artes em Campinas-SP, adotou o
+            estilo academico em suas pinturas. Foi muito influenciado pelo
+            artista Almeida Júnior, do qual pintou muitas variações. Utilizou-se
+            de paisagens obtidas em suas fotografias como casas, igrejas, usinas
+            de cana-de-açúcar, rios, pontes de sua cidade natal para pintar seus
+            quadros.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="text-center">
+            <img
+              src="./quadros/janio_1960.jpg"
+              class="img-thumbnail"
+              alt="Jânio Quadros"
+              width="533"
+              height="800"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="p-1 bg-success text-white text-center">
+            <h1>Pinturas</h1>
+            <!--p>Algumas informações</p-->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col">
+          <h2>Carlos - filho</h2>
+          <p>1984</p>
+          <img
+            src="./quadros/quadro_22.jpg"
+            class="img-thumbnail"
+            alt="Carlos - filho"
+            width="184"
+            height="156"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Olaria</h2>
+          <p>1989</p>
+          <img
+            src="./quadros/quadro_13.jpg"
+            class="img-thumbnail"
+            alt="Olaria"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+        <div class="col">
+          <h2>Igrejinha</h2>
+          <p>1989</p>
+          <img
+            src="./quadros/quadro_21.jpg"
+            class="rounded"
+            alt="Igrejinha"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Curva na estrada</h2>
+          <p>1989</p>
+          <img
+            src="./quadros/quadro_20.jpg"
+            class="rounded"
+            alt="Curva na estrada"
+            width="236"
+            height="304"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Árvore em beira de rio</h2>
+          <p>1989</p>
+          <img
+            src="./quadros/quadro_23.jpg"
+            class="rounded"
+            alt="Árvore em beira de rio"
+            width="236"
+            height="304"
+          />
+          <p><em>Posse: Maria Helena Bresciani Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Reflexos</h2>
+          <p>1990</p>
+          <img
+            src="./quadros/quadro_12.jpg"
+            class="rounded"
+            alt="Reflexos"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Amigo Luiz</h2>
+          <p>1990</p>
+          <img
+            src="./quadros/quadro_19.jpg"
+            class="rounded"
+            alt="Amigo"
+            width="236"
+            height="304"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Casa</h2>
+          <p>1991</p>
+          <img
+            src="./quadros/quadro_15.jpg"
+            class="rounded"
+            alt="Casa"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Casa no sítio</h2>
+          <p>1991</p>
+          <img
+            src="./quadros/quadro_16.jpg"
+            class="rounded"
+            alt="Casa no sítio"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Flores</h2>
+          <p>1991</p>
+          <img
+            src="./quadros/quadro_25.jpg"
+            class="rounded"
+            alt="Flores"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Maria Helena Besciani Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Rosas</h2>
+          <p>1993:</p>
+          <img
+            src="./quadros/quadro_24.jpg"
+            class="rounded"
+            alt="Rosas"
+            width="236"
+            height="304"
+          />
+          <p><em>Posse: Cibele Aparecida Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Ponte do Santouro</h2>
+          <p>1994</p>
+          <img
+            src="./quadros/quadro_11.jpg"
+            class="rounded"
+            alt="Ponte do Santouro"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Cadeira</h2>
+          <p>1996</p>
+          <img
+            src="./quadros/quadro_9.jpg"
+            class="rounded"
+            alt="Cadeira"
+            width="236"
+            height="304"
+          />
+          <p><em>Posse: Maria Cristina Pazzianotto Soares</em></p>
+        </div>
+        <div class="col">
+          <h2>Peixes</h2>
+          <p>1996</p>
+          <img
+            src="./quadros/quadro_14.jpg"
+            class="rounded"
+            alt="Peixes"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+        </div>
+
+        <div class="col">
+          <h2>Estação</h2>
+          <p>1998</p>
+          <img
+            src="./quadros/quadro_2.jpg"
+            class="rounded"
+            alt="Estação"
+            width="304"
+            height="236"
+          />
+          <p><em>Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_10.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+
+        <div class="col">
+          <h2>26</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_26.jpeg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+        <div class="col">
+          <h2>5</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_5.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>6</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_6.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+
+        <div class="col">
+          <h2>17</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_17.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="236"
+            height="304"
+          />
+        </div>
+
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_18.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>4</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_4.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+
+        <div class="col">
+          <h2>1</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_1.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="236"
+            height="304"
+          />
+        </div>
+        <div class="col">
+          <h2>3</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_3.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>7</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_7.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+        <div class="col">
+          <h2>8</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_8.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_27.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_28.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_29.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="236"
+            height="304"
+          />
+        </div>
+        <div class="col">
+          <h2>Rounded Corners</h2>
+          <p>The .rounded class adds rounded corners to an image:</p>
+          <img
+            src="./quadros/quadro_30.jpg"
+            class="rounded"
+            alt="Cinque Terre"
+            width="304"
+            height="236"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-5 p-4 bg-dark text-white text-center">
+      <p>
+        Caso tenha alguma obra de Décio Pazzianotto, por favor envie-nos uma
+        foto digital para o email carlos.pazzianotto@gmail.com
+      </p>
+    </div>
   </body>
 </html>
