Ajustes de espaçãmento em index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             pais, Pietro Antonio Gattel e Teresa Armelin. Na foto aparecem da
             esquerda para a direita em pé: Décio, Alberto (Vechetta) , Antonio
             (Nunciato), Angelo, Maria e Teresa (gêmeas), Elydia, Ignez, e
-            Floriza . Mais a frente e sentatos estão Edmur (filho mais novo),
+            Floriza. Mais a frente e sentados estão: Edmur (filho mais novo),
             Benjamim, Padre Romário, Vittoria e Leonor.
           </p>
         </div>
@@ -91,7 +91,7 @@
         <div class="col-sm-7">
           <p class="text-justify">
             Nasceu em Capivari em 7 de novembro de 1929, casou-se com Maria
-            Helena Bresciani Pazzianotto. Teve 3 filhos: Carlos, Cristina e
+            Helena Bresciani Pazzianotto. Tiveram 3 filhos: Carlos, Cristina e
             Cibele. Trabalhou como alfaiate.
           </p>
           <p class="text-justify">
@@ -133,8 +133,10 @@
       </div>
     </div>
 
-    <div class="container mt-3">
-      <div class="row">
+    <div class="container mt-3 pt-5">
+
+      <div class="row  text-center">
+
         <div class="col">
           <h2>Carlos - filho</h2>
           <p>1984</p>
@@ -145,7 +147,7 @@
             width="184"
             height="156"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -158,8 +160,9 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
+
         <div class="col">
           <h2>Igrejinha</h2>
           <p>1989</p>
@@ -170,11 +173,11 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
       </div>
-
-      <div class="row">
+<hr class="p-3">
+      <div class="row text-center">
         <div class="col">
           <h2>Curva na estrada</h2>
           <p>1989</p>
@@ -185,7 +188,7 @@
             width="236"
             height="304"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -198,7 +201,7 @@
             width="236"
             height="304"
           />
-          <p><em>Posse: Maria Helena Bresciani Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Maria Helena Bresciani Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -211,11 +214,13 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
       </div>
 
-      <div class="row">
+      <hr class="p-3">
+
+      <div class="row text-center">
         <div class="col">
           <h2>Amigo Luiz</h2>
           <p>1990</p>
@@ -226,7 +231,7 @@
             width="236"
             height="304"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -239,7 +244,7 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -252,11 +257,13 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
       </div>
 
-      <div class="row">
+      <hr class="p-3">
+
+      <div class="row text-center">
         <div class="col">
           <h2>Flores</h2>
           <p>1991</p>
@@ -267,7 +274,7 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Maria Helena Besciani Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Maria Helena Besciani Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -280,7 +287,7 @@
             width="236"
             height="304"
           />
-          <p><em>Posse: Cibele Aparecida Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Cibele Aparecida Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -293,11 +300,31 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
       </div>
 
-      <div class="row">
+      <hr class="p-3">
+
+      <div class="row text-center">
+        <div class="col">
+          <h2>Rua da Barra</h2>
+          <p>1995</p>
+          <img
+            src="./quadros/quadro_33.jpg"
+            class="rounded"
+            alt="Rua da Barra"
+            width="304"
+            height="236"
+          />
+          <p class="p-3">
+            <em
+              >Posse: José de Jesus Soares e Maria Cristina Pazzianotto
+              Soares</em
+            >
+          </p>
+        </div>
+
         <div class="col">
           <h2>Cadeira</h2>
           <p>1996</p>
@@ -308,8 +335,14 @@
             width="236"
             height="304"
           />
-          <p><em>Posse: Maria Cristina Pazzianotto Soares</em></p>
+          <p class="p-3">
+            <em
+              >Posse: José de Jesus Soares e Maria Cristina Pazzianotto
+              Soares</em
+            >
+          </p>
         </div>
+
         <div class="col">
           <h2>Peixes</h2>
           <p>1996</p>
@@ -320,208 +353,263 @@
             width="304"
             height="236"
           />
-          <p><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
         </div>
 
-        <div class="col">
-          <h2>Estação</h2>
-          <p>1998</p>
-          <img
-            src="./quadros/quadro_2.jpg"
-            class="rounded"
-            alt="Estação"
-            width="304"
-            height="236"
-          />
-          <p><em>Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em></p>
-        </div>
-      </div>
+        <hr class="p-3">
 
-      <div class="row">
-        <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_10.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
+        <div class="row text-center">
+          <div class="col">
+            <h2>Estação</h2>
+            <p>1998</p>
+            <img
+              src="./quadros/quadro_2.jpg"
+              class="rounded"
+              alt="Estação"
+              width="304"
+              height="236"
+            />
+            <p class="p-3"><em>Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em></p>
+          </div>
 
-        <div class="col">
-          <h2>26</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_26.jpeg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
-        <div class="col">
-          <h2>5</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_5.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
-      </div>
+          <div class="col">
+            <h2>Barco</h2>
+            <p>2000</p>
+            <img
+              src="./quadros/quadro_10.jpg"
+              class="rounded"
+              alt="Barco"
+              width="304"
+              height="236"
+            />
+            <p class="p-3">
+              <em>Posse: Marcos Stein Jr. e Cibele Aparecida Pazzianotto</em>
+            </p>
+          </div>
 
-      <div class="row">
-        <div class="col">
-          <h2>6</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_6.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
+          <div class="col">
+            <h2>Igreja de Sete Fogões</h2>
+            <p>2000</p>
+            <img
+              src="./quadros/quadro_26.jpeg"
+              class="rounded"
+              alt="Igreja de Sete Fogões"
+              width="304"
+              height="236"
+            />
+            <p class="p-3"><em>Posse: Roberto Carlos Daroz e Lucimara Quibáo Daroz</em></p>
+          </div>
         </div>
 
-        <div class="col">
-          <h2>17</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_17.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="236"
-            height="304"
-          />
+        <hr class="p-3">
+
+        <div class="row text-center">
+          <div class="col">
+            <h2>Capivari Clube - Sede Social</h2>
+            <p>2001</p>
+            <img
+              src="./quadros/quadro_5.jpg"
+              class="rounded"
+              alt="Capivari Clube - Sede Social"
+              width="304"
+              height="236"
+            />
+            <p class="p-3"><em>Posse: Capivari Clube Capivari</em></p>
+          </div>
+
+          <div class="col">
+            <h2>Capivari Clube - Sede Social</h2>
+            <p>2001</p>
+            <img
+              src="./quadros/quadro_6.jpg"
+              class="rounded"
+              alt="Capivari Clube - Sede Social"
+              width="304"
+              height="236"
+            />
+            <p class="p-3"><em>Posse: Capivari Clube Capivari</em></p>
+          </div>
+
+          <div class="col">
+            <h2>Caipira picando fumo</h2>
+            <p>2001</p>
+            <img
+              src="./quadros/quadro_17.jpg"
+              class="rounded"
+              alt="Caipira picando fumo"
+              width="236"
+              height="304"
+            />
+            <p class="p-3">
+              <em
+                >Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo
+                Pazzianotto</em
+              >
+            </p>
+          </div>
         </div>
 
-        <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_18.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
-      </div>
+        <hr class="p-3">
 
-      <div class="row">
-        <div class="col">
-          <h2>4</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_4.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
+        <div class="row text-center">
+          <div class="col">
+            <h2>Fim de tarde</h2>
+            <p>2005</p>
+            <img
+              src="./quadros/quadro_18.jpg"
+              class="rounded"
+              alt="Fim de tarde"
+              width="304"
+              height="236"
+            />
+          </div>
 
-        <div class="col">
-          <h2>1</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_1.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="236"
-            height="304"
-          />
-        </div>
-        <div class="col">
-          <h2>3</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_3.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
-      </div>
+          <div class="col">
+            <h2>O violeiro</h2>
+            <p>2006</p>
+            <img
+              src="./quadros/quadro_4.jpg"
+              class="rounded"
+              alt="O violeiro"
+              width="304"
+              height="236"
+            />
+          </div>
 
-      <div class="row">
-        <div class="col">
-          <h2>7</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_7.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
-        </div>
-        <div class="col">
-          <h2>8</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
-          <img
-            src="./quadros/quadro_8.jpg"
-            class="rounded"
-            alt="Cinque Terre"
-            width="304"
-            height="236"
-          />
+          <div class="col">
+            <h2>A estrada</h2>
+            <p>2007</p>
+            <img
+              src="./quadros/quadro_1.jpg"
+              class="rounded"
+              alt="A estrada"
+              width="236"
+              height="304"
+            />
+            <p class="p-3">
+              <em
+                >Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em
+              >
+            </p>
+          </div>
         </div>
 
+        <hr class="p-3">
+
+        <div class="row text-center">
+
+          <div class="col">
+            <h2>Encontro do Divino</h2>
+            <p>????</p>
+            <img
+              src="./quadros/quadro_3.jpg"
+              class="rounded"
+              alt="Encontro do Divino"
+              width="304"
+              height="236"
+            />
+            <p class="p-3">
+              <em
+                >Posse: José de Jesus Soares e Maria Cristina Pazzianotto
+                Soares</em
+              >
+            </p>
+          </div>
+
+          <div class="col">
+            <h2>Igreja Matriz Capivari</h2>
+            <p>????</p>
+            <img
+              src="./quadros/quadro_7.jpg"
+              class="rounded"
+              alt="Igreja Matriz Capivari"
+              width="304"
+              height="236"
+            />
+          </div>
+
+          <div class="col">
+            <h2>Rua XV de Novembro</h2>
+            <p>????</p>
+            <img
+              src="./quadros/quadro_8.jpg"
+              class="rounded"
+              alt="Rua XV de Novembro"
+              width="304"
+              height="236"
+            />
+          </div>
+
+        </div>
+
+        <hr class="p-3">
+
+        <div class="row text-center">
+
         <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
+          <h2>Estação Sorocabana</h2>
+          <p>????</p>
           <img
             src="./quadros/quadro_27.jpg"
             class="rounded"
-            alt="Cinque Terre"
+            alt="Estação Sorocabana"
             width="304"
             height="236"
           />
+          <p class="p-3">
+            <em
+              >Posse: Alcides Gatti e Brandina Rodrigues Gatti</em
+            >
+          </p>
         </div>
-      </div>
 
-      <div class="row">
         <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
+          <h2>Mamão</h2>
+          <p>????</p>
           <img
             src="./quadros/quadro_28.jpg"
             class="rounded"
-            alt="Cinque Terre"
+            alt="Mamão"
             width="304"
             height="236"
           />
         </div>
 
         <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
+          <h2>Igrejinha</h2>
+          <p>????</p>
           <img
             src="./quadros/quadro_29.jpg"
             class="rounded"
-            alt="Cinque Terre"
+            alt="Igrejinha"
             width="236"
             height="304"
           />
         </div>
+
+        </div>
+
+        <hr class="p-3">
+
+        <div class="row text-center">
+
         <div class="col">
-          <h2>Rounded Corners</h2>
-          <p>The .rounded class adds rounded corners to an image:</p>
+          <h2>Casas velhas</h2>
+          <p>????</p>
           <img
             src="./quadros/quadro_30.jpg"
             class="rounded"
-            alt="Cinque Terre"
+            alt="Casas velhas"
             width="304"
             height="236"
           />
         </div>
+
       </div>
+
+<hr class="p-3">
+
+
     </div>
 
     <div class="mt-5 p-4 bg-dark text-white text-center">
