Inseridos quadro do Campache

--- a/index.html
+++ b/index.html
@@ -358,6 +358,54 @@
 
         <hr class="p-3">
 
+
+      <div class="row text-center">
+        <div class="col">
+          <h2>Beira de Rio</h2>
+          <p>1997</p>
+          <img
+            src="./quadros/quadro_34.jpg"
+            class="rounded"
+            alt="Beira de Rio"
+            width="236"
+            height="304"
+          />
+          <p class="p-3">
+            <em
+              >Posse: Antonio Cláudio Campache</em
+            >
+          </p>
+        </div>
+
+        <div class="col">
+          <h2>Natureza morta</h2>
+          <p>1997</p>
+          <img
+            src="./quadros/quadro_35.jpg"
+            class="rounded"
+            alt="Natureza morta"
+            width="304"
+            height="236"
+          />
+          <p class="p-3">
+            <em>Posse: Antonio Cláudio Campache</em>
+        </div>
+
+        <div class="col">
+          <h2>.....</h2>
+          <p>...</p>
+          <img
+            src="./quadros/quadro_44.jpg"
+            class="rounded"
+            alt=""
+            width="304"
+            height="236"
+          />
+          <p class="p-3"><em>Posse: </em></p>
+        </div>
+
+        <hr class="p-3">
+
         <div class="row text-center">
           <div class="col">
             <h2>Estação</h2>
