Ajustes no index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             width="184"
             height="156"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -160,7 +160,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -173,7 +173,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
       </div>
 <hr class="p-3">
@@ -188,7 +188,7 @@
             width="236"
             height="304"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -214,7 +214,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
       </div>
 
@@ -231,7 +231,7 @@
             width="236"
             height="304"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -244,7 +244,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -257,7 +257,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
       </div>
 
@@ -274,7 +274,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Maria Helena Besciani Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Marcos Stein Jr e Cibele Aparecida Pazzianotto</em></p>
         </div>
 
         <div class="col">
@@ -287,7 +287,7 @@
             width="236"
             height="304"
           />
-          <p class="p-3"><em>Posse: Cibele Aparecida Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Maria Helena Besciani Pazzianotto </em></p>
         </div>
 
         <div class="col">
@@ -300,7 +300,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
       </div>
 
@@ -353,7 +353,7 @@
             width="304"
             height="236"
           />
-          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto</em></p>
+          <p class="p-3"><em>Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo Pazzianotto</em></p>
         </div>
 
         <hr class="p-3">
@@ -417,7 +417,7 @@
               width="304"
               height="236"
             />
-            <p class="p-3"><em>Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em></p>
+            <p class="p-3"><em>Posse: Hermes Bisin Jr. e Linéia O Quibáo Bisin</em></p>
           </div>
 
           <div class="col">
@@ -536,7 +536,7 @@
             />
             <p class="p-3">
               <em
-                >Posse: Hermes Bizin Jr. e Linéia O Quibáo Bizin</em
+                >Posse: Hermes Bisin Jr. e Linéia O Quibáo Bisin</em
               >
             </p>
           </div>
