Novas entradas de quadros

--- a/index.html
+++ b/index.html
@@ -910,6 +910,68 @@
       </div>
 
       <hr class="p-3" />
+
+
+      <div class="row text-center">
+        <div class="col">
+          <h2>Pescador limpando o peixe</h2>
+          <p>1993</p>
+          <img
+            src="./quadros/quadro_47.jpg"
+            class="rounded"
+            alt="Pescador limpando o peixe"
+            width="304"
+            height="236"
+          />
+          <p class="p-3">
+            <em
+              >Posse: </em
+            >
+          </p>
+        </div>
+
+        <div class="col">
+          <h2>Usina Açucareira Santa Cruz</h2>
+          <p>1983</p>
+          <img
+            src="./quadros/quadro_48.jpg"
+            class="rounded"
+            alt="Pescador limpando o peixe"
+            width="304"
+            height="236"
+          />
+          <p class="p-3">
+            <em
+              >Posse: Orlando Carniceli Jr.</em
+            >
+          </p>
+        </div>
+
+        <div class="col">
+          <h2>Represa de Santa Rita</h2>
+          <p>1996</p>
+          <img
+            src="./quadros/quadro_49.jpg"
+            class="rounded"
+            alt="Pescador limpando o peixe"
+            width="304"
+            height="236"
+          />
+          <p class="p-3">
+            <em
+              >Posse: Carlos Benjamim Pazzianotto e Leonice R Quibáo
+              Pazzianotto</em
+            >
+          </p>
+        </div>
+
+
+       
+      </div>
+
+
+
+      <hr class="p-3" />
       <br />
       <br />
     </div>
