Alteração no index informando o contato

--- a/index.html
+++ b/index.html
@@ -89,5 +89,17 @@
 
     <script src="./cadastro/dados.js"></script>
     <script src="app.js"></script>
-  </body>
+
+<hr class="divider" />
+      <br />
+      <br />
+    </div>
+
+<div class="quadro-info">
+      <p class="posse">
+        Caso tenha alguma obra de Décio Pazzianotto, por favor envie uma
+        foto digital para o email carlos.pazzianotto@gmail.com
+      </p>
+</div>
+</body>
 </html>
